* RecentChange::getPerformer(), deprecated since 1.36, has been dropped.
* SpecialPage::getLanguageConverter(), deprecated since 1.36, has been dropped.
  Use LanguageConverterFactory::getLanguageConverter() directly.
* SpecialBlock::checkUnblockSelf(), deprecated since 1.36, has been dropped. Use
  BlockPermissionChecker instead.
* ChangeTags::modifyDisplayQuery() and ChangeTagsStore::modifyDisplayQuery()
  have been deprecated in favor of ChangeTagsStore::modifyDisplayQueryBuilder()
* Calling SpecialRandomPage::__construct without services as parameters is
  deprecated and emit deprecation warnings.
* …

=== Other changes in 1.41 ===
* ExternalLinksLookup::getExternalLinksForPage() now exists to centralize
  logic of looking up externallinks rows.
* The update script no longer accepts the --skip-compat-checks option.
* Use of the deprecated "Pragma: no-cache" HTTP response header on uncachable
  responses has been removed in favour of "Cache-Control: no-cache" (T345420).
* Type hints were added to:
   - The return value of WebRequest:: and DerivativeRequest::getSession()
   - The return value of WebRequest:: and DerivativeRequest::getIP()
   - The return value of User::getTitleKey()
   - The return value of User::getRequest()
   - The `$key` parameter to Skin::normalizeKey()
  None of the methods whose return value was updated belongs to a class
  stable to extend, and adding type hints to parameters is backwards
  compatible. Therefore, this is not considered a breaking change.
* The mergeMessageFileList script now only works for extensions and skins
  supporting extension registration (using extension.json or skin.json).
  It will no longer attempt to load PHP entry points.
* Parser will no longer fall back to $wgTitle if a null is provided as a
  Title or PageReference. To change the relevant title used for methods
  that do not offer an option to set the page, call Parser::setPage.
  This affects the methods cleanSig, getSection and replaceSection.
* …
