@@ -165,6 +165,11 @@
 	}
 }
 
+.mw-diff-inline-header {
+	font-weight: bold;
+	margin: 1em 0;
+}
+
 .diff-context {
 	background: #f8f9fa;
 	border-color: #eaecf0;
