@@ -1065,6 +1065,9 @@ because of Phabricator reports.
   Use LanguageConverterFactory::getLanguageConverter() directly.
 * SpecialBlock::checkUnblockSelf(), deprecated since 1.36, has been dropped. Use
   BlockPermissionChecker instead.
+* DifferenceEngine::localiseLineNumbers() has been deprecated in favor of
+  BaseTextDiffer::localizeLineNumbers(). Subclasses such as PhpTextDiffer may
+  make this available via a ::localize() method.
 * ChangeTags::modifyDisplayQuery() and ChangeTagsStore::modifyDisplayQuery()
   have been deprecated in favor of ChangeTagsStore::modifyDisplayQueryBuilder()
 * Calling SpecialRandomPage::__construct without services as parameters is
